--- a/jsconfig.json
+++ b/jsconfig.json
@@ -32,6 +32,9 @@
       ],
       "~Context/*": [
         "src/hook/Context/*"
+      ],
+      "~ItemDetail/*": [
+        "src/pages/ItemDetail/*"
       ]
     }
   }
