--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,39 +3,17 @@
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "~assets/*": [
-        "src/assets/*"
-      ],
-      "~css/*": [
-        "src/css/*"
-      ],
-      "~font/*": [
-        "src/font/*"
-      ],
-      "~pages/*": [
-        "src/pages/*"
-      ],
-      "~/*": [
-        "src/*"
-      ],
-      "~utils/*": [
-        "src/utils/*"
-      ],
-      "~components/*": [
-        "src/components/*"
-      ],
-      "~apis/*": [
-        "src/apis/*"
-      ],
-      "~hook/*": [
-        "src/hook/*"
-      ],
-      "~Context/*": [
-        "src/hook/Context/*"
-      ],
-      "~ItemDetail/*": [
-        "src/pages/ItemDetail/*"
-      ]
+      "~assets/*": ["src/assets/*"],
+      "~css/*": ["src/css/*"],
+      "~font/*": ["src/font/*"],
+      "~pages/*": ["src/pages/*"],
+      "~/*": ["src/*"],
+      "~utils/*": ["src/utils/*"],
+      "~components/*": ["src/components/*"],
+      "~apis/*": ["src/apis/*"],
+      "~hook/*": ["src/hook/*"],
+      "~Context/*": ["src/hook/Context/*"],
+      "~ItemDetail/*": ["src/pages/ItemDetail/*"]
     }
   }
 }
