fix(import): styled-system root modify

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,9 @@
       ],
       "@images/*": [
         "src/assets/images/*"
+      ],
+      "@styled-system/*": [
+        "src/styled-system/*"
       ]
     }
   },
