--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^1.7.2",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.39.2",
