refactor: file location

--- a/package.json
+++ b/package.json
@@ -16,12 +16,21 @@
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.3",
+    "@eslint/js": "^9.3.0",
     "@pandacss/dev": "^0.39.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.3.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.3.0",
+    "typescript": "^5",
+    "typescript-eslint": "^7.11.0"
   }
 }
