--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
