feat(tsconfig): panda theme color auto complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/**/*",
+    "panda.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
