--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.4",
+    "@tanstack/react-query-devtools": "^5.51.4",
     "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "18.2.0",
